# assignment-3-plpp-oleksandr-budiak

./: CMakeLists.txt  README.md
include/: mylib.h
src/: main.cpp  mylib.cpp
